修改了页面布局

--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -2,25 +2,6 @@
   --theme--color: #2073e0;
 }
 
-.el-header {
-  box-shadow: 0 0 2rem 0 rgba(41, 48, 66, 0.1);
-  margin-left: 0px;
-  line-height: 60px;
-  position: relative;
-  min-width: 400px;
-  clear: both;
-}
-
-.el-header .iconfont:hover {
-  color: var(--theme--color);
-}
-
-.el-main {
-  border-radius: 10px;
-  transition: all 0.4s;
-  transform: scale(1.02);
-}
-
 #aside-menu {
   height: 100vh;
   text-align: center;
@@ -29,6 +10,29 @@
 
 #aside-menu:not(.el-menu--collapse) {
   width: 12vw;
+}
+
+.el-header {
+  box-shadow: 0 0 2rem 0 rgba(41, 48, 66, 0.1);
+  display: flex;
+  align-items: center;
+}
+
+.collapse {
+  margin-right: 30px;
+}
+
+.collapse:hover {
+  color: var(--theme--color);
+  cursor: pointer;
+}
+
+.el-main {
+  transition: all 0.4s;
+  height: 90vh;
+  width: 100%;
+  padding: 10px !important;
+  overflow-x: hidden !important;
 }
 
 .el-divider__text {
